--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.10.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./src/index.js"
   },
   "author": "911harm",
   "license": "MIT"
