--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "project hector express md handlerbars ",
   "main": "index.js",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "express-session": "^1.17.1",
